# inventory-app

./: .env.example  .gitignore  AGENTS.md  docker-compose.prod.yml  docker-compose.yml
apps/backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  pyproject.toml
apps/backend/diagrams/: current-db-erd.puml
apps/backend/examples/requests/: README.md  auth-login.json  auth-refresh.query.json  auth-register.json  exchange-rates-upsert.json  products-adjust-stock-add.json  products-adjust-stock-subtract.json  products-create.json  products-update.json  sales-create.json  seeded-products-adjust-stock.json  store-update.json  sync-pull.json  sync-push-product-delete.json  sync-push-product-upsert.json
apps/backend/scripts/: export_openapi.py
apps/backend/src/: main.py
apps/backend/src/application/: exceptions.py
apps/backend/src/application/dto/: auth_dto.py  billing_dto.py  cash_movement_dto.py  dashboard_dto.py  exchange_rate_dto.py  inventory_import_dto.py  photo_dto.py  product_category_dto.py  product_dto.py  report_dto.py  sale_dto.py  stock_movement_dto.py  store_day_dto.py  store_dto.py  sync_dto.py  user_dto.py
apps/backend/src/application/ports/: exchange_rate_provider.py  image_validator.py  ocr_service.py  photo_storage.py  queue_service.py
apps/backend/src/application/use_cases/: date_ranges.py
apps/backend/src/config/: cloudinary.py  database.py  dev_constants.py  redis.py  settings.py  supabase.py
apps/backend/src/infrastructure/: seed.py
apps/backend/src/presentation/: dependencies.py
apps/backend/tests/: conftest.py
apps/backend/tests/integration/: test_api.py  test_auth_users_permissions.py  test_cash_movements.py  test_dashboard_reports.py  test_error_contract.py  test_health.py  test_inventory_imports.py  test_products_operations.py  test_seed.py  test_sprint7_sales_stock_exports.py  test_store_day.py  test_sync.py
scripts/: keepalive.py
(+608 files in other folders)
