[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "inventory-backend"
version = "0.1.0"
description = "Inventory App API — Python FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "supabase>=2.30",
    "cloudinary>=1.42",
    "celery>=5.4",
    "redis>=5.2",
    "python-multipart>=0.0.18",
    "qrcode[pil]>=7.4",
    "sentry-sdk>=2.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
    "mypy>=1.14",
]
qa = [
    "pytest-cov>=6.0",
]
prod = [
    "gunicorn>=23",
]
ai = [
    "easyocr>=1.7",
    "python-bidi>=0.6.2,<0.6.4",
    "pillow>=11.1",
    "opencv-python>=4.10",
    "scikit-learn>=1.6",
    "spacy>=3.8.14",
]

[tool.setuptools.packages.find]
where = ["src"]
